# lottery-dao-contract

./: README.md
SmartContracts/myLottery/: Cargo.toml
SmartContracts/myLottery/meta/: Cargo.toml
SmartContracts/myLottery/meta/src/: main.rs
SmartContracts/myLottery/output/: my_lottery.abi.json  my_lottery.imports.json  my_lottery.mxsc.json  my_lottery.wasm
SmartContracts/myLottery/scenarios/: my_lottery.scen.json
SmartContracts/myLottery/src/: my_lottery.rs
SmartContracts/myLottery/tests/: my_lottery_scenario_go_test.rs  my_lottery_scenario_rs_test.rs
SmartContracts/myLottery/wasm/: Cargo.toml
SmartContracts/myLottery/wasm/src/: lib.rs
SmartContracts/rewardsDistribution/: Cargo.toml
SmartContracts/rewardsDistribution/meta/: Cargo.toml
SmartContracts/rewardsDistribution/output/: rewardsDistribution.abi.json  rewards_distribution.abi.json  rewards_distribution.imports.json  rewards_distribution.mxsc.json  rewards_distribution.wasm
SmartContracts/rewardsDistribution/scenarios/: rewards_distribution.scen.json
SmartContracts/rewardsDistribution/src/: rewards_distribution.rs
SmartContracts/rewardsDistribution/tests/: rewards_distribution_scenario_go_test.rs  rewards_distribution_scenario_rs_test.rs
SmartContracts/rewardsDistribution/wasm/: Cargo.toml
SmartContracts/rewardsDistribution/wasm/src/: lib.rs
