[package]
name = "my_lottery"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/my_lottery.rs"

[dependencies.multiversx-sc]
version = "0.47.4"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.47.4"

[workspace]
members = [
    ".",
    "meta",
]
