[package]
name = "rewards_distribution"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/rewards_distribution.rs"

[dependencies.multiversx-sc]
version = "0.47.4"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.47.4"

[workspace]
members = [
    ".",
    "meta",
]